Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.7.0 alpha 1
    
    Features Added

      - ZTUtils.Iterator now handles any object that has a Python
        iterator, resolving Collector #385 and #577.  The
        implementation is somwhat simpler, as well.

      - ZTUtils.Tree.TreeMaker now has additional methods for setting
        various flags and attributes that influence how the tree is built,
        making these aspects accessible to PythonScripts.

      - ZTUtils.Tree.TreeMaker has a new method setStateFunction, which
        allows you to set a callback function that can influence the state
        (open, closed, leaf) of each node in the tree.

      - Pidfile handling improved.  When Zope is started under
        zdaemon, it no longer writes its own pidfile.  Instead, it
        passes in the path to Z2.pid to zdaemon as its pidfile name.
        The 'zProcessManager.pid' file is no longer ever written.
        This caused a change to the -Z option of z2.py which should be
        mostly backwards-compatible (unless people were relying on
        zProcessManager.pid to be written).  Now the -Z option is a
        boolean.  -Z1 means use a daemon.  -Z0 means dont.  The
        default is -Z1.

    Bugs Fixed

      - Collector #651: WebDAV Lock Manager was broken.

      - Collector #646: metal:slot was lost during the I18n merge.

      - Removed the signal handler hung off USR1 for packing the database.
        This feature proved dangerous as the pack operation would happen in
        the main thread, causing all asyncore operations to stop until it
        was finished.

      - Collector #372: tal:attributes failed when combined with tal:replace.
      - Don't try to close network connections in the signal handler
        for shutdown.  This hosed ZEO clients.
